исправления по графике на главной

--- a/source/less/blocks/general/site-list.less
+++ b/source/less/blocks/general/site-list.less
@@ -18,12 +18,11 @@
     padding-left: 132px;
     justify-content: space-between;
     width: 100%;
-    background-color: rgba(104, 183, 56, 0.85);
-    z-index: -1;
-    height: 694px;
 
     &--index {
-      padding-top: 70px;
+      padding-top: 74px;
+      padding-bottom: 587px;
+      background-color: rgba(104, 183, 56, 0.85);
 
       & .site-list__link {
         padding-top: 0;
