--- a/source/less/blocks/general/social.less
+++ b/source/less/blocks/general/social.less
@@ -9,7 +9,7 @@
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
-    justify-content: flex-start;
+    justify-content: space-between;
   }
 }
 
@@ -29,31 +29,7 @@
 .social__link {
   display: block;
 
-  &--vkontakte {
-    width: 23px;
-    height: 16px;
-  }
-
-  &--instagram {
-    width: 16px;
-    height: 16px;
-  }
-
-  &--facebook {
-    width: 22px;
-    height: 22px;
-  }
-
   @media (min-width: @tablet-width) {
-    &--vkontakte {
-      margin-left: 9px;
-      margin-right: 34px;
-    }
-
-    &--instagram {
-      margin-right: 24px;
-    }
-
     &--vkontakte svg {
       width: 30px;
       height: 22px;
