--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -52,7 +52,7 @@
   @media (min-width: @desktop-width) {
     .wrapper;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     padding-right: 70px;
   }
 }
@@ -68,6 +68,7 @@
     margin: 0;
     padding: 0;
     padding-top: 57px;
+    margin-right: 100px;
     justify-content: flex-start;
   }
 }
