--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -95,10 +95,12 @@
 
 .address__map {
   height: 362px;
+  width: 100%;
 
   & .address__image {
     width: 100%;
     height: 362px;
+    object-fit: cover;
   }
 
   @media (min-width: @tablet-width) {
