--- a/source/less/blocks/general/main-nav.less
+++ b/source/less/blocks/general/main-nav.less
@@ -30,7 +30,7 @@
   &--closed .main-nav__toggle::before {
     content: "";
     position: absolute;
-    top: 0;
+    top: 2px;
     right: 0;
     width: 24px;
     height: 2px;
@@ -72,22 +72,16 @@
   }
 
   @media (min-width: @desktop-width) {
-    .heading(20px; auto);
+    .heading(20px; 20px);
     width: 50%;
   }
 
   &--index {
     @media (min-width: @desktop-width) {
-      background-color: @green;
-      height: 694px;
       background-image: url("../img/index-background-desktop.jpg");
       background-repeat: no-repeat;
-      background-position: 100% 50%;
-
-      @media (min-resolution: 2dppx) {
-        background-image: url("../img/index-background-desktop@2x.jpg");
-        background-size: 720px auto;
-      }
+      background-size: cover;
+      background-position: 50% 50%;
     }
   }
 }
