--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -14,12 +14,13 @@
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
-    padding-top: 52px;
+    align-items: flex-start;
+    padding-top: 55px;
     padding-bottom: 50px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 55px;
+    padding-top: 60px;
     padding-bottom: 35px;
   }
 }
@@ -31,11 +32,12 @@
   background-position: center;
   width: 128px;
   height: 24px;
-  margin-bottom: 32px;
+  margin-bottom: 31px;
 
   @media (min-width: @tablet-width) {
     text-align: left;
-    margin: 0 5px 0 0;
+    margin-right: 25px;
+    padding-top: 35px;
   }
 }
 
@@ -43,12 +45,12 @@
   border-top: 1px solid @grey-line;
   border-bottom: 1px solid @grey-line;
   width: 100%;
-  padding: 20px 0 15px;
-  margin-bottom: 17px;
+  padding: 20px 0 11px;
+  margin-bottom: 18px;
 
   @media (min-width: @tablet-width) {
     border: none;
-    width: 129px;
+    width: 130px;
     padding: 0;
     margin-bottom: 0;
   }
