--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -1,69 +1,95 @@
 .page-main__heading {
   text-align: center;
-  background-image: url("../img/index-background-mobile.jpg");
-  background-repeat: no-repeat;
-  background-position: 50% 0;
-  height: 437px;
-  margin-bottom: 3px;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../img/index-background-mobile@2x.jpg");
-    background-size: 320px auto;
-  }
+  margin-bottom: 21px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 
   @media (min-width: @tablet-width) {
-    background-color: @basic-white;
+    .wrapper;
     text-align: left;
-    padding-bottom: 0;
-    height: 245px;
-    background-image: none;
-    position: relative;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 53px;
     position: absolute;
-    top: 195px;
+    top: 140px;
+    padding-bottom: 200px;
+    background-image: url("../img/index-can-desktop.png");
+    background-repeat: no-repeat;
+    background-position: 63% 0;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/index-can-desktop@2x.png");
+      background-size: 552px auto;
+    }
+  }
+}
+
+.page-main__heading-background-color {
+  background-color: rgba(104, 183, 56, 0.85);
+
+  @media (min-width: @tablet-width) {
+    background-color: @basic-white;
+  }
+
+  @media (min-width: @desktop-width) {
     background-color: transparent;
   }
 }
 
-.page-main__heading-bg {
-  height: 302px;
-  background-color: rgba(104, 183, 56, 0.85);
-  z-index: -1;
+.page-main__heading-background-img {
+  background-image: url("../img/rectangle-background.png"), url("../img/index-background-mobile.jpg");
+  background-repeat: no-repeat, no-repeat;
+  background-size: cover, contain;
+  background-position: 100% 100%, 50% 50%;
+  padding-top: 27px;
+  padding-bottom: 164px;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/rectangle-background@2x.png"), url("../img/index-background-mobile@2x.jpg");
+    background-size: cover, contain;
+  }
 
   @media (min-width: @tablet-width) {
-    .wrapper;
-    background-color: @basic-white;
-    z-index: auto;
+    background-image: none;
+    padding-bottom: 20px;
   }
 
   @media (min-width: @desktop-width) {
-    display: flex;
-    background-color: transparent;
+    padding-bottom: 25px;
+  }
+}
+
+.page-main__container {
+  .wrapper;
+
+  @media (min-width: @tablet-width) {
+    margin: 0;
     padding: 0;
-    width: 920px;
-    margin-left: 190px;
+    width: 100%;
+    padding-left: 87px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 80px;
   }
 }
 
 .page-main__title {
   .heading(36px; 36px);
-  padding-top: 27px;
   color: @basic-white;
-  width: 249px;
-  margin: 0 auto 25px;
+  margin: 0 0 25px 0;
 
   @media (min-width: @tablet-width) {
     .heading(60px; 60px);
-    margin: 0 0 41px 87px;
+    margin-bottom: 41px;
     width: 414px;
   }
 
   @media (min-width: @desktop-width) {
     margin: 0;
     margin-bottom: 40px;
+    margin-top: 55px;
   }
 }
 
@@ -71,13 +97,10 @@
   .heading(14px; 14px);
   color: @basic-white;
   text-transform: uppercase;
-  width: 198px;
-  margin: 0 auto 29px;
+  margin: 0;
 
   @media (min-width: @tablet-width) {
     .heading(20px; 20px);
-    width: 283px;
-    margin: 0 0 20px 87px;
   }
 
   @media (min-width: @desktop-width) {
@@ -85,18 +108,49 @@
   }
 }
 
+.page-main__wrapper {
+  @media (min-width: @tablet-width) {
+    padding: 29px 85px 550px;
+    background-image: url("../img/index-can-tablet.png");
+    background-repeat: no-repeat;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/index-can-tablet@2x.png");
+      background-size: contain;
+    }
+
+    @media (min-width: @desktop-width) {
+      background-image: none;
+      padding-left: 80px;
+      padding-bottom: 0;
+    }
+  }
+}
 
 .page-main__image {
+  z-index: 2;
+  margin-top: -135px;
+
   @media (min-width: @tablet-width) {
-    width: 709px;
-    height: 609px;
-    margin-left: 0;
+    display: none;
+  }
+}
+
+.page-main__button {
+  .button(14px);
+  line-height: 18px;
+  width: 280px;
+  padding-bottom: 12px;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    width: 244px;
+    padding: 18px 26px;
+    margin: 0;
   }
 
   @media (min-width: @desktop-width) {
-    width: 552;
-    height: 499px;
-    margin-left: -35px;
-    margin-top: -55px;
+    padding: 16px 20px 18px;
   }
 }
