--- a/source/less/blocks/index/slider.less
+++ b/source/less/blocks/index/slider.less
@@ -4,21 +4,13 @@
   @media (min-width: @tablet-width) {
     background-color: @bg-grey;
     padding-bottom: 68px;
-    height: 462px;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 690px;
-    padding-bottom: 70px;
+    padding-top: 358px;
+    position: relative;
   }
 }
 
-.slider__wrapper {
-  @media (min-width: @tablet-width) {
-    .wrapper;
-    position: relative;
-    height: 462px;
-  }
+.slider__container {
+  .wrapper;
 }
 
 .slider__list {
@@ -27,16 +19,16 @@
   margin: 0;
 
   @media (min-width: @tablet-width) {
-    width: 708px;
-    display: flex;
     position: absolute;
-    left: 30px;
+    left: 60px;
+    right: 0;
     top: -185px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   @media (min-width: @desktop-width) {
-    top: -205px;
-    left: 27px;
+    left: 0;
   }
 }
 
@@ -47,24 +39,22 @@
   &--current {
     display: block;
   }
-
-  @media (min-width: @tablet-width) {
-    width: 354px;
-    height: 607px;
-    display: block;
-  }
 }
 
 .slider__photo {
-  margin-bottom: 18px;
+  margin-bottom: 16px;
   width: 311px;
   height: 232px;
 
+  &--after {
+    width: 251px;
+    height: 240px;
+    margin-bottom: 8px;
+  }
+
   @media (min-width: @tablet-width) {
-    width: 354px;
-    height: 607px;
-    margin-bottom: 0;
-    margin-left: 0;
+    width: 460px;
+    height: 536px;
   }
 }
 
@@ -79,14 +69,11 @@
   @media (min-width: @tablet-width) {
     width: 570px;
     height: 34px;
-    position: absolute;
-    left: 100px;
-    top: 361px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-left: 20px;
-    width: 585px;
+    margin-left: 115px;
+    width: 570px;
   }
 }
 
@@ -104,7 +91,6 @@
     padding: 4px 0;
   }
 
-
   @media (min-width: @desktop-width) {
     padding: 4px 0 6px;
   }
@@ -120,9 +106,9 @@
 }
 
 .slider__scale {
-  height: 18px;
+  height: 14px;
   background-color: @basic-white;
-  border: 2px solid @special-grey;
+  border: 1px solid @special-grey;
   border-radius: 10px;
 
   @media (min-width: @tablet-width) {
@@ -136,7 +122,7 @@
 .slider__bar {
   width: 35px;
   height: 6px;
-  margin: 4px;
+  margin: 3px 43px 0 4px;
   background-color: @green;
   border-radius: 5px;
 
@@ -149,7 +135,7 @@
   @media (min-width: @tablet-width) {
     position: absolute;
     top: -15px;
-    left: 197px;
+    left: 50%;
     width: 34px;
     height: 34px;
     padding: 0;
