--- a/source/less/blocks/general/social.less
+++ b/source/less/blocks/general/social.less
@@ -3,18 +3,21 @@
   padding: 0;
   margin: 0;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
+  padding-left: 70px;
   flex-wrap: wrap;
   align-items: center;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
     justify-content: space-between;
+    padding-left: 0;
+    margin-top: -2px;
   }
 }
 
 .social__item {
-  margin-right: 33px;
+  margin-right: 35px;
   margin-bottom: 5px;
 
   &:nth-child(3n) {
