--- a/source/less/blocks/index/slider.less
+++ b/source/less/blocks/index/slider.less
@@ -22,13 +22,14 @@
     position: absolute;
     left: 60px;
     right: 0;
-    top: -185px;
+    top: -170px;
     margin-left: auto;
     margin-right: auto;
   }
 
   @media (min-width: @desktop-width) {
     left: 0;
+    top: -190px;
   }
 }
 
@@ -39,22 +40,51 @@
   &--current {
     display: block;
   }
+
+  &--before {
+    margin-left: -10px;
+  }
+
+  @media (min-width: @tablet-width) {
+    &--before {
+      margin-left: -75px;
+    }
+
+    &--after {
+      margin-left: -20px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    &--before {
+      margin-left: 40px;
+    }
+
+    &--after {
+      margin-left: 100px;
+    }
+  }
 }
 
 .slider__photo {
-  margin-bottom: 16px;
+  margin-bottom: 18px;
   width: 311px;
   height: 232px;
 
   &--after {
     width: 251px;
     height: 240px;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
   }
 
   @media (min-width: @tablet-width) {
-    width: 460px;
-    height: 536px;
+    width: 660px;
+    height: 520px;
+
+    &--after {
+      width: 600px;
+      height: 518px;
+    }
   }
 }
 
@@ -67,8 +97,9 @@
   margin: 0 auto;
 
   @media (min-width: @tablet-width) {
-    width: 570px;
+    width: 575px;
     height: 34px;
+    margin-top: 3px;
   }
 
   @media (min-width: @desktop-width) {
@@ -135,7 +166,7 @@
   @media (min-width: @tablet-width) {
     position: absolute;
     top: -15px;
-    left: 50%;
+    left: 0;
     width: 34px;
     height: 34px;
     padding: 0;
