--- a/source/less/blocks/catalog/extra-products.less
+++ b/source/less/blocks/catalog/extra-products.less
@@ -216,11 +216,21 @@
   padding-top: 186px;
   padding-bottom: 43px;
   position: relative;
+  background-image: url("../img/gift-photo-mobile.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
+    background-size: contain;
+  }
 
   &::before {
     content: "";
     position: absolute;
-    background-color: @basic-white;
+    background-image: url("../img/icon-gift.svg");
+    background-repeat: no-repeat;
+    background-position: center;
     width: 78px;
     height: 80px;
     top: 58px;
@@ -232,6 +242,11 @@
     justify-content: space-between;
     text-align: left;
     padding: 71px 124px 69px 423px;
+    background-image: url("../img/gift-photo-tablet.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/gift-photo-tablet@2x.jpg");
+    }
 
     &::before {
       width: 80px;
@@ -247,6 +262,11 @@
     padding-top: 184px;
     padding-bottom: 42px;
     margin-bottom: 0;
+    background-image: url("../img/gift-photo-desktop.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/gift-photo-desktop@2x.jpg");
+    }
 
     &::before {
       top: 55px;
