--- a/source/less/blocks/catalog/products.less
+++ b/source/less/blocks/catalog/products.less
@@ -47,7 +47,7 @@
 
   @media (min-width: @tablet-width) {
     width: 324px;
-    padding: 30px 36px 39px;
+    padding: 30px 36px 40px;
     margin: 0 60px 140px 0;
     background-color: @basic-grey;
     border: none;
@@ -56,18 +56,30 @@
       margin-right: 0;
     }
 
+    &:nth-child(2) {
+      & .products__photo {
+        height: 205px;
+      }
+    }
+
     &:last-child {
       margin-bottom: 0;
     }
   }
 
   @media (min-width: @desktop-width) {
-    margin: 0 80px 144px 0;
+    margin: 0 80px 143px 0;
     width: 245px;
     padding: 0 30 0 35px;
 
     &:nth-child(2n) {
       margin-right: 80px;
+    }
+
+    &:nth-child(2) {
+      & .products__photo {
+        height: 200px;
+      }
     }
 
     &:nth-child(4n) {
@@ -83,21 +95,24 @@
 
 .products__card {
   .wrapper;
-  padding: 19px 18px 24px 20px;
+  padding: 20px 18px 9px 20px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 
   @media (min-width: @tablet-width) {
+    position: relative;
     width: 252px;
     flex-direction: column;
     align-items: center;
     padding: 0;
+    padding-top: 131px;
     margin-bottom: 33px;
   }
 
   @media (min-width: @desktop-width) {
     width: 180px;
+    padding-top: 133px;
   }
 }
 
@@ -105,27 +120,30 @@
   width: 140px;
 
   @media (min-width: @tablet-width) {
+    position: absolute;
+    top: -102px;
+    left: -7px;
     width: 168px;
-    height: 100px;
-    margin-bottom: 33px;
   }
 
   @media (min-width: @desktop-width) {
+    top: -110px;
+    left: -15px;
     width: 172px;
     margin-bottom: 33px;
   }
 }
 
 .products__photo {
-  margin-left: 30px;
-  margin-top: 10px;
-
   @media (min-width: @tablet-width) {
     margin-left: 50px;
+    width: 168px;
+    height: 198px;
   }
 
   @media (min-width: @desktop-width) {
     margin-left: 20px;
+    width: 172px;
   }
 }
 
@@ -152,7 +170,7 @@
     .heading(20px; 24px);
     width: 150px;
     text-align: center;
-    margin: 0 auto 14px;
+    margin: 0 auto 15px;
   }
 
   @media (min-width: @desktop-width) {
