--- a/source/less/blocks/general/site-list.less
+++ b/source/less/blocks/general/site-list.less
@@ -13,14 +13,11 @@
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 60px;
-    padding-right: 110px;
-    padding-left: 132px;
+    padding: 74px 110px 0 132px;
     justify-content: space-between;
     width: 100%;
 
     &--index {
-      padding-top: 74px;
       padding-bottom: 587px;
       background-color: rgba(104, 183, 56, 0.85);
 
