удалила отдельные svg файлы, добавила адрес ссылки в лого

--- a/source/less/blocks/general/site-list.less
+++ b/source/less/blocks/general/site-list.less
@@ -18,7 +18,7 @@
     width: 100%;
 
     &--index {
-      padding-bottom: 587px;
+      min-height: 694px;
       background-color: rgba(104, 183, 56, 0.85);
 
       & .site-list__link {
