--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -346,6 +346,7 @@
   right: 14px;
   top: 15px;
   cursor: pointer;
+  stroke: @basic-black;
 
   @media (min-width: @tablet-width) {
     right: 16px;
