корректировка иконок в форме, доработка активного состояния кнопки в каталоге, удаление лишнего js файла

--- a/source/less/blocks/catalog/products-big-list.less
+++ b/source/less/blocks/catalog/products-big-list.less
@@ -99,6 +99,15 @@
   background-color: @basic-grey;
   margin: 0 auto 24px;
 
+  &:hover,
+  &:focus {
+    background-color: @grey-button-hover;
+  }
+
+  &:active {
+    color: @catalog-button-active;
+  }
+
   @media (min-width: @tablet-width) {
     width: 249px;
     margin-bottom: 35px;
