--- a/source/less/blocks/general/social.less
+++ b/source/less/blocks/general/social.less
@@ -32,6 +32,15 @@
 .social__link {
   display: block;
 
+  &--vkontakte path,
+  &--instagram path {
+    fill: @grey-icon;
+  }
+
+  &--facebook path {
+    stroke: @grey-icon;
+  }
+
   &:active {
     opacity: 0.3;
   }
