--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -11,9 +11,11 @@
 @grey-bar: #dcdcdc;
 @grey-icon: #666666;
 @grey-border: #e6e6e6;
+@grey-button-hover: #ebebeb;
 @grey-border-input: #e7e7e7;
 @hover-grey-border: #bababa;
 @grey-plus: #d3d3d3;
+@catalog-button-active: rgba(68, 68, 68, 0.3);
 @green: #68b738;
 @hover-green: #5eaa2f;
 @red: #ff8282;
