--- a/source/less/blocks/index/example-result.less
+++ b/source/less/blocks/index/example-result.less
@@ -20,7 +20,7 @@
   align-items: center;
   width: 124px;
   margin-right: 31px;
-  margin-bottom: 25px;
+  margin-bottom: 26px;
 
   &:nth-child(2) {
     margin-right: 0;
@@ -29,7 +29,11 @@
   @media (min-width: @tablet-width) {
     width: 162px;
     margin-right: 42px;
-    margin-bottom: 50px;
+    margin-bottom: 49px;
+
+    &--weight .example-result__text {
+      width: 114px;
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -39,7 +43,7 @@
 
 .example-result__count {
   .heading(24px; 24px);
-  padding: 14px 41px 17px;
+  padding: 14px 41px 16px;
   text-transform: uppercase;
   margin: 0;
   border: 1px solid @special-grey;
@@ -47,8 +51,7 @@
 
   @media (min-width: @tablet-width) {
     .heading(30px; 37px);
-    padding-left: 56px;
-    padding-right: 56px;
+    padding: 14px 56px 19px 56px;
   }
 }
 
@@ -68,16 +71,18 @@
   line-height: 12px;
   background-color: @bg-grey;
   margin: 0;
-  width: 59px;
+  width: 85px;
   text-align: center;
   top: 47px;
+  padding: 0 13px;
 
   @media (min-width: @tablet-width) {
     font-size: 14px;
     line-height: 14px;
-    width: 127px;
+    width: 140px;
     background-color: @basic-white;
     top: 63px;
+    padding: 0 5px;
   }
 
   @media (min-width: @desktop-width) {
