стилизация активного состояния лого, кнопок слайдера, состояния ошибки в форме

--- a/source/less/blocks/index/slider.less
+++ b/source/less/blocks/index/slider.less
@@ -120,6 +120,15 @@
     font-size: 20px;
     border-bottom: 1px dotted @basic-black;
     padding: 4px 0;
+
+    &:hover {
+      border-bottom: 1px solid @basic-black;
+    }
+
+    &:focus,
+    &:active {
+      border-bottom: none;
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -173,8 +182,17 @@
     border: 1px solid @special-grey;
     border-radius: 50%;
     background-color: @basic-white;
-    box-shadow: 0 1px 1px 0 @special-grey;
+    box-shadow: 0 1px 1px @special-grey;
     cursor: pointer;
+
+    &:hover {
+      box-shadow: 0 3px 3px @special-grey;
+    }
+
+    &:focus,
+    &:active {
+      border: 1px solid @green;
+    }
 
     &::before {
       position: absolute;
