--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -292,10 +292,6 @@
   justify-content: space-between;
   align-items: flex-start;
   position: relative;
-
-  &:focus-within svg {
-    stroke: @green;
-  }
 }
 
 .form__field {
@@ -306,17 +302,34 @@
   flex: 1;
   margin-left: 11px;
 
-  &:hover {
+  &--name:hover,
+  &--weight:hover,
+  &--age:hover {
     border-color: @special-grey;
   }
 
-  &:focus {
-    border-color: @special-dark-grey;
-    outline: 1px solid @special-dark-grey;
+  &:focus,
+  &:disabled {
+    border-color: transparent;
+    outline: 2px solid @special-dark-grey;
   }
 
-  &--tel svg {
-    fill: @basic-black;
+  &--mail {
+    &:focus,
+    &:disabled {
+      & + svg {
+        stroke: @green;
+      }
+    }
+  }
+
+  &--tel {
+    &:focus,
+    &:disabled {
+      & + svg {
+        fill: @green;
+      }
+    }
   }
 
   &--tel,
@@ -324,8 +337,17 @@
     border-color: @special-grey;
   }
 
-  &--tel:disabled {
-    border: 2px solid @special-dark-grey;
+  &--error {
+    border-color: transparent;
+    outline: 2px solid @red;
+
+    & + .form__icon--envelope {
+      stroke: @red;
+    }
+
+    & + .form__icon--tel {
+      fill: @red;
+    }
   }
 
   @media (min-width: @tablet-width) {
