--- a/source/less/blocks/general/page-footer.less
+++ b/source/less/blocks/general/page-footer.less
@@ -34,6 +34,15 @@
   height: 24px;
   margin-bottom: 31px;
 
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:focus,
+  &:active {
+    opacity: 0.3;
+  }
+
   @media (min-width: @tablet-width) {
     text-align: left;
     margin-right: 25px;
