--- a/source/less/blocks/general/page-header.less
+++ b/source/less/blocks/general/page-header.less
@@ -47,6 +47,15 @@
 .page-header__logo {
   margin-right: 56px;
 
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:focus,
+  &:active {
+    opacity: 0.3;
+  }
+
   @media (min-width: @tablet-width) {
     margin-right: 13px;
   }
@@ -70,6 +79,15 @@
 
 .page-header__title {
   padding-top: 7px;
+
+  &:hover {
+    opacity: 0.7;
+  }
+
+  &:focus,
+  &:active {
+    opacity: 0.3;
+  }
 
   @media (min-width: @tablet-width) {
     display: none;
