--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -341,6 +341,10 @@
     border-color: transparent;
     outline: 2px solid @red;
 
+    &:hover {
+      border-color: transparent;
+    }
+
     & + .form__icon--envelope {
       stroke: @red;
     }
