--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -41,6 +41,7 @@
 
     &--grey-bg {
       padding: 50px 76px 51px;
+      z-index: 5;
     }
   }
 }
@@ -104,7 +105,7 @@
     height: 400px;
 
     & .address__image {
-      height: 400px;
+      height: 100%;
     }
   }
 }
