редактирование под переполнение

--- a/source/less/blocks/catalog/catalog-main.less
+++ b/source/less/blocks/catalog/catalog-main.less
@@ -3,6 +3,7 @@
   .wrapper;
   margin-top: 28px;
   margin-bottom: 39px;
+  word-break: break-all;
 
   @media (min-width: @tablet-width) {
     .heading(60px; 60px);
