--- a/source/less/blocks/catalog/products.less
+++ b/source/less/blocks/catalog/products.less
@@ -165,10 +165,11 @@
   display: block;
   width: 76px;
   margin-bottom: 14px;
+  word-break: break-all;
 
   @media (min-width: @tablet-width) {
     .heading(20px; 24px);
-    width: 150px;
+    min-width: 130px;
     text-align: center;
     margin: 0 auto 15px;
   }
@@ -182,6 +183,7 @@
 .products__info {
   width: 100%;
   border-collapse: collapse;
+  word-break: break-all;
 
   & td {
     padding: 0;
@@ -205,6 +207,7 @@
   .button;
   margin: 0 auto;
   margin-bottom: 23px;
+  word-break: break-all;
 
   @media (min-width: @tablet-width) {
     width: 248px;
