--- a/source/less/blocks/index/example.less
+++ b/source/less/blocks/index/example.less
@@ -23,6 +23,7 @@
   .heading(36px; 40px);
   padding-top: 27px;
   margin-bottom: 20px;
+  word-break: break-all;
 
   @media (min-width: @tablet-width) {
     .heading(60px; 60px);
