--- a/source/less/blocks/form/form-main.less
+++ b/source/less/blocks/form/form-main.less
@@ -3,6 +3,7 @@
   .wrapper;
   margin-bottom: 37px;
   margin-top: 27px;
+  word-break: break-all;
 
   @media (min-width: @tablet-width) {
     .heading(60px; 60px);
