--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -13,6 +13,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   padding: 10px 19px 9px;
 
   &--grey-bg {
@@ -31,18 +32,16 @@
 
   @media (min-width: @desktop-width) {
     width: 570px;
+    max-width: 1100px;
     position: absolute;
     top: 95px;
     left: 110px;
-    padding: 45px 76px 41px;
     opacity: 1;
     background-color: @basic-white;
     justify-content: flex-start;
-
-    &--grey-bg {
-      padding: 50px 76px 51px;
-      z-index: 5;
-    }
+    z-index: 5;
+    padding: 50px 76px 51px;
+    max-height: 201px;
   }
 }
 
@@ -67,7 +66,9 @@
   @media (min-width: @desktop-width) {
     .heading(20px; 25px);
     width: 163px;
+    max-height: 100px;
     margin-right: 87px;
+    overflow: hidden;
   }
 }
 
@@ -91,6 +92,8 @@
   @media (min-width: @desktop-width) {
     text-align: left;
     line-height: 25px;
+    max-height: 100px;
+    overflow: hidden;
   }
 }
 
