--- a/source/less/blocks/index/details.less
+++ b/source/less/blocks/index/details.less
@@ -16,6 +16,7 @@
   .heading(36px; 40px);
   margin-bottom: 39px;
   margin-top: 27px;
+  word-break: break-all;
 
   @media (min-width: @tablet-width) {
     .heading(60px; 60px);
