--- a/source/less/blocks/index/page-main.less
+++ b/source/less/blocks/index/page-main.less
@@ -28,6 +28,7 @@
 .page-main__heading-background-color {
   padding-top: 27px;
   padding-bottom: 164px;
+  min-height: 302px;
   background-color: rgba(104, 183, 56, 0.85);
   position: relative;
 
@@ -86,6 +87,7 @@
   .heading(36px; 36px);
   color: @basic-white;
   margin: 0 0 25px 0;
+  overflow-wrap: break-word;
 
   @media (min-width: @tablet-width) {
     .heading(60px; 60px);
@@ -105,6 +107,7 @@
   color: @basic-white;
   text-transform: uppercase;
   margin: 0;
+  word-break: break-all;
 
   @media (min-width: @tablet-width) {
     .heading(20px; 20px);
