--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -142,7 +142,9 @@
   margin-top: 0;
   margin-bottom: 35px;
   padding-left: 72px;
+  padding-right: 20px;
   position: relative;
+  word-break: break-all;
 
   &::before {
     position: absolute;
@@ -198,6 +200,7 @@
   border-top: 1px solid @grey-line;
   width: 240px;
   padding-top: 19px;
+  word-break: break-all;
 
   &:active,
   &:focus {
