--- a/source/less/blocks/general/main-nav.less
+++ b/source/less/blocks/general/main-nav.less
@@ -7,6 +7,8 @@
   position: relative;
 
   &--opened .main-nav__toggle {
+    cursor: pointer;
+
     &::before,
     &::after {
       position: absolute;
