--- a/source/less/blocks/catalog/extra-products.less
+++ b/source/less/blocks/catalog/extra-products.less
@@ -84,7 +84,7 @@
 
   @media (min-width: @tablet-width) {
     border: 1px solid @special-grey;
-    margin-bottom: 69px;
+    margin-bottom: 70px;
   }
 
   @media (min-width: @desktop-width) {
@@ -214,7 +214,6 @@
   flex-wrap: wrap;
   text-align: center;
   background-color: @green;
-  max-height: 289px;
   margin-bottom: 35px;
   padding-top: 186px;
   padding-bottom: 43px;
@@ -236,7 +235,7 @@
     background-position: center;
     width: 78px;
     height: 80px;
-    top: 58px;
+    top: 55px;
     left: 101px;
   }
 
@@ -244,8 +243,7 @@
     align-items: center;
     justify-content: space-between;
     text-align: left;
-    padding: 71px 124px 69px 423px;
-    max-height: 200px;
+    padding: 30px 30px 70px 330px;
     background-image: url("../img/gift-photo-tablet.jpg");
 
     @media (min-resolution: 2dppx) {
@@ -263,9 +261,6 @@
     width: 245px;
     text-align: center;
     padding: 0;
-    max-height: 289px;
-    padding-top: 184px;
-    padding-bottom: 42px;
     margin-bottom: 0;
     background-image: url("../img/gift-photo-desktop.jpg");
 
@@ -283,6 +278,13 @@
 .extra-products__text {
   margin: 0 auto;
   width: 161px;
-  height: 100px;
-  overflow: hidden;
+  overflow-wrap: break-word;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 40px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 145px;
+  }
 }
