--- a/source/less/blocks/catalog/products.less
+++ b/source/less/blocks/catalog/products.less
@@ -8,14 +8,14 @@
     font-size: 16px;
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     margin-bottom: 70px;
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto auto;
-    margin-bottom: 76px;
+    grid-template-rows: 1fr 1fr;
+    margin-bottom: 74px;
   }
 }
 
