--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -4,7 +4,10 @@
   }
 
   @media (min-width: @desktop-width) {
-    position: relative;
+    min-height: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
   }
 }
 
@@ -32,16 +35,18 @@
 
   @media (min-width: @desktop-width) {
     width: 570px;
-    max-width: 1100px;
-    position: absolute;
-    top: 95px;
-    left: 110px;
     opacity: 1;
-    background-color: @basic-white;
-    justify-content: flex-start;
     z-index: 5;
-    padding: 50px 76px 51px;
-    max-height: 201px;
+    background-color: @basic-white;
+    justify-content: center;
+    order: 2;
+    align-self: flex-start;
+    margin: -300px 0 0 110px;
+    padding: 40px 0;
+
+    &--catalog {
+      padding: 45px 0;
+    }
   }
 }
 
@@ -49,6 +54,7 @@
   .heading(16px; 21px);
   .uppercase-text(@black-text);
   width: 140px;
+  overflow-wrap: break-word;
 
   &--grey-bg {
     margin-bottom: 10px;
@@ -66,9 +72,7 @@
   @media (min-width: @desktop-width) {
     .heading(20px; 25px);
     width: 163px;
-    max-height: 100px;
     margin-right: 87px;
-    overflow: hidden;
   }
 }
 
@@ -77,6 +81,7 @@
   line-height: 20px;
   width: 140px;
   margin: 0;
+  overflow-wrap: break-word;
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
@@ -92,13 +97,12 @@
   @media (min-width: @desktop-width) {
     text-align: left;
     line-height: 25px;
-    max-height: 100px;
-    overflow: hidden;
   }
 }
 
 .address__map {
   width: 100%;
+  height: 362px;
 
   & .address__image {
     object-fit: cover;
