--- a/source/less/blocks/general/site-list.less
+++ b/source/less/blocks/general/site-list.less
@@ -64,6 +64,12 @@
     opacity: 0.3;
   }
 
+  &--active:hover,
+  &--active:focus,
+  &--active:active {
+    opacity: 1;
+  }
+
   @media (min-width: @tablet-width) {
     padding: 0 0 8px;
 
