--- a/source/less/blocks/index/programs.less
+++ b/source/less/blocks/index/programs.less
@@ -6,7 +6,7 @@
 
   @media (min-width: @desktop-width) {
     margin-bottom: 40px;
-    margin-top: 0;
+    margin-top: -15px;
   }
 }
 
@@ -229,6 +229,16 @@
     border-left: 5px solid @basic-black;
   }
 
+  &:hover {
+    &::before {
+      width: 26px;
+    }
+
+    &::after {
+      left: 126px;
+    }
+  }
+
   @media (min-width: @tablet-width) {
     font-size: 20px;
     border: none;
@@ -243,6 +253,16 @@
       left: 150px;
       top: 22px;
     }
+
+    &:hover {
+      &::before {
+        width: 28px;
+      }
+
+      &::after {
+        left: 158px;
+      }
+    }
   }
 
   @media (min-width: @desktop-width) {
@@ -252,8 +272,14 @@
     }
 
     &::after {
-      left: 149px;
+      left: 155px;
       top: 21px;
+    }
+
+    &:hover {
+      &::after {
+        left: 160px;
+      }
     }
   }
 }
