--- a/source/less/blocks/catalog/products.less
+++ b/source/less/blocks/catalog/products.less
@@ -6,15 +6,15 @@
   @media (min-width: @tablet-width) {
     .wrapper;
     font-size: 16px;
+    margin-bottom: 70px;
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    margin-bottom: 70px;
+    grid-auto-rows: minmax(430px, auto);
+    column-gap: 60px;
   }
 
   @media (min-width: @desktop-width) {
     grid-template-columns: auto auto auto auto;
-    grid-template-rows: 1fr 1fr;
     margin-bottom: 74px;
   }
 }
@@ -70,7 +70,7 @@
   @media (min-width: @desktop-width) {
     margin: 0 80px 143px 0;
     width: 245px;
-    padding: 0 30 0 35px;
+    padding: 0 30px 40px 35px;
 
     &:nth-child(2n) {
       margin-right: 80px;
@@ -127,7 +127,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    top: -110px;
+    top: -80px;
     left: -15px;
     width: 172px;
     margin-bottom: 33px;
@@ -156,6 +156,7 @@
 
   @media (min-width: @desktop-width) {
     width: 173px;
+    padding-top: 30px;
   }
 }
 
