--- a/source/less/blocks/form/form-main.less
+++ b/source/less/blocks/form/form-main.less
@@ -24,15 +24,18 @@
   .wrapper;
   text-transform: uppercase;
   margin-bottom: 39px;
+  overflow-wrap: break-word;
 
   @media (min-width: @tablet-width) {
     .heading(20px; 30px);
     margin-bottom: 65px;
     padding-left: 70px;
+    padding-right: 300px;
   }
 
   @media (min-width: @desktop-width) {
     padding: 0 110px;
     margin-bottom: 66px;
+    padding-right: 950px;
   }
 }
