--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -54,14 +54,6 @@
     & .form__point {
       margin: 0 0 13px;
     }
-
-    & .form__field {
-      margin-left: 16px;
-
-      &--weight {
-        margin-left: 18px;
-      }
-    }
   }
 
   &--program {
@@ -290,9 +282,11 @@
 .form__point {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
   position: relative;
+
+  & label {
+    flex: 1;
+  }
 }
 
 .form__field {
@@ -300,12 +294,21 @@
   .uppercase-text(@special-dark-grey);
   border: 1px solid @grey-border-input;
   padding: 13px 16px 13px 14px;
-  flex: 1;
-  margin-left: 11px;
+  overflow-wrap: break-word;
 
-  &--name:hover,
-  &--weight:hover,
-  &--age:hover {
+  &--name {
+    min-width: 228px;
+  }
+
+  &--weight {
+    min-width: 204px;
+  }
+
+  &--age {
+    min-width: 172px;
+  }
+
+  &:hover {
     border-color: @special-grey;
   }
 
@@ -316,6 +319,8 @@
   }
 
   &--mail {
+    min-width: 219px;
+
     &:focus,
     &:disabled {
       & + svg {
@@ -325,6 +330,8 @@
   }
 
   &--tel {
+    min-width: 204px;
+
     &:focus,
     &:disabled {
       & + svg {
@@ -335,7 +342,6 @@
 
   &--tel,
   &--mail {
-    border-color: @special-grey;
     padding-right: 35px;
   }
 
@@ -361,17 +367,53 @@
     color: @special-dark-grey;
     padding: 10px 20px;
 
+    &--name {
+      min-width: 565px;
+    }
+
+    &--weight {
+      min-width: 534px;
+    }
+
     &--age {
+      min-width: 495px;
       padding: 10px 23px;
+    }
+
+    &--mail {
+      min-width: 549px;
     }
 
     &--tel {
       padding: 10px 18px;
+      min-width: 533px;
     }
 
     &--tel,
     &--mail {
       padding-right: 40px;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    &--name {
+      min-width: 503px;
+    }
+
+    &--weight {
+      min-width: 471px;
+    }
+
+    &--age {
+      min-width: 432px;
+    }
+
+    &--mail {
+      min-width: 484px;
+    }
+
+    &--tel {
+      min-width: 470px;
     }
   }
 }
@@ -497,7 +539,7 @@
   }
 
   &:focus + label::before {
-    outline: thin dotted @special-dark-grey;
+    border: 1px dotted @special-dark-grey;
   }
 
   &:disabled + label,
