--- a/source/less/blocks/general/address.less
+++ b/source/less/blocks/general/address.less
@@ -5,9 +5,7 @@
 
   @media (min-width: @desktop-width) {
     min-height: 400px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+    position: relative;
   }
 }
 
@@ -35,14 +33,15 @@
 
   @media (min-width: @desktop-width) {
     width: 570px;
+    height: 201px;
     opacity: 1;
     z-index: 5;
+    position: absolute;
+    justify-content: flex-start;
+    top: 95px;
+    left: 110px;
     background-color: @basic-white;
-    justify-content: center;
-    order: 2;
-    align-self: flex-start;
-    margin: -300px 0 0 110px;
-    padding: 40px 0;
+    padding: 45px 0;
 
     &--catalog {
       padding: 45px 0;
@@ -72,6 +71,7 @@
   @media (min-width: @desktop-width) {
     .heading(20px; 25px);
     width: 163px;
+    margin-left: 75px;
     margin-right: 87px;
   }
 }
