--- a/source/less/blocks/general/site-list.less
+++ b/source/less/blocks/general/site-list.less
@@ -8,6 +8,7 @@
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
+    justify-content: flex-start;
     flex-grow: 1;
     padding-top: 35px;
   }
@@ -35,10 +36,16 @@
 
 .site-list__item {
   border-top: 1px solid @grey-border-input;
+  flex: 1;
 
   @media (min-width: @tablet-width) {
     border: none;
-    margin-right: 35px;
+    margin-right: 30px;
+    min-width: 155px;
+
+    &:first-child {
+      min-width: 70px;
+    }
 
     &:nth-child(3n) {
       margin-right: 0;
@@ -46,14 +53,16 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-right: 32px;
+    margin-right: 30px;
+    min-width: 172px;
   }
 }
 
 .site-list__link {
   display: block;
   color: @basic-black;
-  padding: 22px 0 23px;
+  padding: 22px 5px 23px;
+  word-break: break-all;
 
   &:hover,
   &:focus {
